--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME="YamahaClub Loyalty"
 APP_ENV=local
 APP_KEY=base64:eJvldKZk6IigjatswK1/RAKePtP8Od1EjCbfWvEw9xQ=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost:8001/
-API_URL=http://localhost:8001/
+APP_URL=http://localhost:8001
+API_URL=http://localhost:8000
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=yclubph_testdb
-DB_USERNAME=yclubph
-DB_PASSWORD=~1hrCkUuWx-f
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
