added user info

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "izitoast": "^1.4.0"
+    "izitoast": "^1.4.0",
+    "moment": "^2.22.2"
   }
 }
